--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%22sabjipH9%22%7D",
+        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%229s5gz8iE%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
+        "creation": "2025-07-23T06:01:29.602Z",
+        "lastAccessed": "2025-07-23T06:01:29.602Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
+        "creation": "2025-07-23T06:01:29.602Z",
+        "lastAccessed": "2025-07-23T06:01:29.602Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
+        "creation": "2025-07-23T06:01:29.602Z",
+        "lastAccessed": "2025-07-23T06:01:29.602Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
+        "creation": "2025-07-23T06:01:29.602Z",
+        "lastAccessed": "2025-07-23T06:01:29.602Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
+        "creation": "2025-07-23T06:01:29.602Z",
+        "lastAccessed": "2025-07-23T06:01:29.602Z"
     },
     {
         "key": "ps_n",
@@ -50,17 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
+        "creation": "2025-07-23T06:01:29.602Z",
+        "lastAccessed": "2025-07-23T06:01:29.602Z"
     },
     {
         "key": "pas",
@@ -68,26 +59,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
+        "creation": "2025-07-23T06:01:29.602Z",
+        "lastAccessed": "2025-07-23T06:01:29.602Z"
     },
     {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
+        "key": "locale",
+        "value": "en_GB",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
+        "creation": "2025-07-23T06:01:29.602Z",
+        "lastAccessed": "2025-07-23T06:01:29.602Z"
     },
     {
         "key": "c_user",
@@ -95,43 +77,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
-    },
-    {
-        "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWc4M11PZz6v1bbH_vYKhsg7eSLn6CtFd81IsklD73GhjdQnno8.Bn_fCK..AAA.0.0.BodwvO.AWc5o-24V_5Xuw9ru20vXY9aJt8",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
+        "creation": "2025-07-23T06:01:29.602Z",
+        "lastAccessed": "2025-07-23T06:01:29.602Z"
     },
     {
         "key": "xs",
-        "value": "22%3A1Au58kVd1PUdwg%3A2%3A1752632270%3A-1%3A-1",
+        "value": "33%3ADVyFIm1UHaXwwA%3A2%3A1752944554%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
+        "creation": "2025-07-23T06:01:29.602Z",
+        "lastAccessed": "2025-07-23T06:01:29.602Z"
+    },
+    {
+        "key": "fr",
+        "value": "0MmXGi5OoGPsKoWdq.AWc8RNZwB2PIxU1pEzOgaZQ1QZP7sSPGidYW-IZdgirF_wkTUPc.Bn_fCK..AAA.0.0.BogHqr.AWcEZU9I8VsB_qHnZF84UdjUg4c",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-23T06:01:29.602Z",
+        "lastAccessed": "2025-07-23T06:01:29.602Z"
     },
     {
         "key": "fbl_st",
-        "value": "101023301%3BT%3A29210537",
+        "value": "101334598%3BT%3A29220841",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
+        "creation": "2025-07-23T06:01:29.602Z",
+        "lastAccessed": "2025-07-23T06:01:29.602Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2872%3Btimestamp%3A1752632273",
+        "value": "v2%3Bclient_version%3A2877%3Btimestamp%3A1753250475",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-16T02:18:12.652Z",
-        "lastAccessed": "2025-07-16T02:18:12.652Z"
+        "creation": "2025-07-23T06:01:29.602Z",
+        "lastAccessed": "2025-07-23T06:01:29.602Z"
     }
 ]
