--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%229s5gz8iE%22%7D",
+        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%22ioYnFZPx%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-07-23T06:01:29.602Z",
-        "lastAccessed": "2025-07-23T06:01:29.602Z"
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-23T06:01:29.602Z",
-        "lastAccessed": "2025-07-23T06:01:29.602Z"
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-23T06:01:29.602Z",
-        "lastAccessed": "2025-07-23T06:01:29.602Z"
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-23T06:01:29.602Z",
-        "lastAccessed": "2025-07-23T06:01:29.602Z"
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-23T06:01:29.602Z",
-        "lastAccessed": "2025-07-23T06:01:29.602Z"
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-23T06:01:29.602Z",
-        "lastAccessed": "2025-07-23T06:01:29.602Z"
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-23T06:01:29.602Z",
-        "lastAccessed": "2025-07-23T06:01:29.602Z"
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-23T06:01:29.602Z",
-        "lastAccessed": "2025-07-23T06:01:29.602Z"
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
     },
     {
         "key": "c_user",
@@ -77,43 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-23T06:01:29.602Z",
-        "lastAccessed": "2025-07-23T06:01:29.602Z"
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
     },
     {
         "key": "xs",
-        "value": "33%3ADVyFIm1UHaXwwA%3A2%3A1752944554%3A-1%3A-1",
+        "value": "40%3AY9u9hBXdbcYjqA%3A2%3A1753435435%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-23T06:01:29.602Z",
-        "lastAccessed": "2025-07-23T06:01:29.602Z"
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWc8RNZwB2PIxU1pEzOgaZQ1QZP7sSPGidYW-IZdgirF_wkTUPc.Bn_fCK..AAA.0.0.BogHqr.AWcEZU9I8VsB_qHnZF84UdjUg4c",
+        "value": "0MmXGi5OoGPsKoWdq.AWd-Smr2NZIjt5Zm6bJ6jdb8RtqISxkXOvYc6UP0Qi4FRix9cT4.Bn_fCK..AAA.0.0.Bog00u.AWfUjLKlOdH18GLHLaTBUBG2_vo",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-23T06:01:29.602Z",
-        "lastAccessed": "2025-07-23T06:01:29.602Z"
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
     },
     {
         "key": "fbl_st",
-        "value": "101334598%3BT%3A29220841",
+        "value": "101027391%3BT%3A29223924",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-23T06:01:29.602Z",
-        "lastAccessed": "2025-07-23T06:01:29.602Z"
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2877%3Btimestamp%3A1753250475",
+        "value": "v2%3Bclient_version%3A2879%3Btimestamp%3A1753435474",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-23T06:01:29.602Z",
-        "lastAccessed": "2025-07-23T06:01:29.602Z"
+        "creation": "2025-07-25T09:24:43.601Z",
+        "lastAccessed": "2025-07-25T09:24:43.601Z"
     }
 ]
