--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     },
     {
         "key": "pas",
@@ -59,17 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     },
     {
         "key": "c_user",
@@ -77,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     },
     {
         "key": "xs",
@@ -86,8 +77,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -95,8 +95,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     },
     {
         "key": "wd",
@@ -104,34 +104,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWdTEK0wJgGPPhxIZbk2mU2ihmExdwlsJziyta0I_0mfApvcwQc.Bn_fCK..AAA.0.0.BojGbB.AWcUy63jMNgTKWfCuAKVg9IVcDI",
+        "value": "0MmXGi5OoGPsKoWdq.AWfqv4iO4oUCI95WwlFlyNoG6lsvKxq4saELWYV12laPQfRe9mw.Bn_fCK..AAA.0.0.BokS4F.AWddY0QXRp70McPQ9jut_P7Etyw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     },
     {
         "key": "fbl_st",
-        "value": "101224655%3BT%3A29233863",
+        "value": "101235282%3BT%3A29239082",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2883%3Btimestamp%3A1754031809",
+        "value": "v2%3Bclient_version%3A2886%3Btimestamp%3A1754344965",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-01T07:03:38.172Z",
-        "lastAccessed": "2025-08-01T07:03:38.172Z"
+        "creation": "2025-08-04T22:02:54.226Z",
+        "lastAccessed": "2025-08-04T22:02:54.226Z"
     }
 ]
